// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieListComponent /> container Render snapshot - with modal params 1`] = `
<Row
  className="top-padding"
  gutter={16}
  type="flex"
>
  <Col
    className="cards"
    offset={2}
    span={20}
  >
    <Col
      key="1"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={
          Array [
            <DeleteItemModalContainer
              onConfirm={[Function]}
              params={
                Object {
                  "movieId": 9999,
                }
              }
              title="some title"
              type="delete"
            />,
          ]
        }
        item={
          Object {
            "id": 1,
          }
        }
      />
    </Col>
    <Col
      key="2"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={
          Array [
            <DeleteItemModalContainer
              onConfirm={[Function]}
              params={
                Object {
                  "movieId": 9999,
                }
              }
              title="some title"
              type="delete"
            />,
          ]
        }
        item={
          Object {
            "id": 2,
          }
        }
      />
    </Col>
    <Col
      key="3"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={
          Array [
            <DeleteItemModalContainer
              onConfirm={[Function]}
              params={
                Object {
                  "movieId": 9999,
                }
              }
              title="some title"
              type="delete"
            />,
          ]
        }
        item={
          Object {
            "id": 3,
          }
        }
      />
    </Col>
  </Col>
</Row>
`;

exports[`<MovieListComponent /> container Render snapshot - without modal params 1`] = `
<Row
  className="top-padding"
  gutter={16}
  type="flex"
>
  <Col
    className="cards"
    offset={2}
    span={20}
  >
    <Col
      key="1"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={null}
        item={
          Object {
            "id": 1,
          }
        }
      />
    </Col>
    <Col
      key="2"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={null}
        item={
          Object {
            "id": 2,
          }
        }
      />
    </Col>
    <Col
      key="3"
      lg={
        Object {
          "span": 6,
        }
      }
      md={
        Object {
          "span": 8,
        }
      }
      sm={
        Object {
          "span": 12,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 12,
        }
      }
    >
      <MovieItemComponent
        actions={null}
        item={
          Object {
            "id": 3,
          }
        }
      />
    </Col>
  </Col>
</Row>
`;

exports[`<MovieListComponent /> container Render snapshot - without movies 1`] = `
<Row
  className="top-padding"
  gutter={16}
  type="flex"
>
  <Col
    className="cards"
    offset={2}
    span={20}
  >
    <OriginEmpty
      className="cards__empty"
      description="No movies found"
      image="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
    />
  </Col>
</Row>
`;
